<resources>
    <string name="app_name">Valverde Wallpapers</string>
    <string name="mobile_wallpapers">Mobile Wallpapers</string>
    <string name="find_out_your_need">Find out your need</string>
    <string name="get_started">Get started</string>
    <string name="wallpapers">Valverde Wallpapers</string>
    <string name="all">All</string>
    <string name="latest">Latest</string>
    <string name="premium">Premium</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="set_as_my_wallpaper">Set as my wallpaper</string>
    <string name="edit">Edit</string>
    <string name="home_screen">Home screen</string>
    <string name="lock_screen">Lock screen</string>
    <string name="watch_video">Watch a video for\npremium wallpapers</string>



    //ads ids
    <string name="banner_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="inter_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="rewarded_video_id">ca-app-pub-3940256099942544/5224354917</string>
</resources>