<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/intro_backgound"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/textColor"
        android:textSize="24sp"
        android:fontFamily="@font/font_500"
        app:layout_constraintVertical_bias="0.8"
        android:text="@string/mobile_wallpapers"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/mobile1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/textColor"
        android:textSize="16sp"
        android:fontFamily="@font/font_500"
        android:text="@string/find_out_your_need"
        app:layout_constraintBottom_toTopOf="@+id/get_started"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mobile" />

    <Button
        android:id="@+id/get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:background="@drawable/butto_background"
        app:backgroundTint="?attr/button_backgroundColor"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:fontFamily="@font/font_400"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobile1" />
</androidx.constraintlayout.widget.ConstraintLayout>