<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:background="?attr/backgroundScreen"
    android:layout_height="match_parent">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <RelativeLayout
          android:id="@+id/relativeLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:layout_marginTop="20dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">

          <TextView
              android:id="@+id/textView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerVertical="true"
              android:layout_marginStart="20dp"
              android:layout_toRightOf="@+id/toggle"
              android:fontFamily="@font/montserrat_semibold"
              android:text="@string/wallpapers"
              android:textColor="?attr/home_textColor"
              android:textSize="20sp" />
          <ImageView
              android:id="@+id/toggle"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:src="@drawable/ic_toogle"
              android:layout_alignParentStart="true"
              app:tint="?attr/toggle_color" />
      </RelativeLayout>


      <TextView
          android:id="@+id/all"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="20dp"
          android:text="@string/all"
          android:textSize="16sp"
          android:layout_marginTop="15dp"
          android:fontFamily="@font/montserrat_semibold"
          android:textColor="@color/yellowTextColor"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

      <TextView
          android:id="@+id/latest"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/latest"
          android:textSize="16sp"
          android:layout_marginTop="15dp"
          android:fontFamily="@font/montserrat_semibold"
          android:textColor="?attr/home_categoryColors"
          app:layout_constraintEnd_toStartOf="@+id/premium"
          app:layout_constraintStart_toEndOf="@+id/all"
          app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

      <TextView
          android:id="@+id/premium"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/premium"
          android:textSize="16sp"
          android:fontFamily="@font/montserrat_semibold"
          android:textColor="?attr/home_categoryColors"
          android:layout_marginEnd="20dp"
          android:layout_marginTop="15dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
          />

          <androidx.recyclerview.widget.RecyclerView
              android:id="@+id/recyclerView"
              android:layout_width="match_parent"
              android:layout_height="0dp"
              android:layout_marginTop="8dp"
              android:layout_weight="1"
              android:layout_marginStart="7dp"
              android:layout_marginEnd="7dp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toBottomOf="@id/premium"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
              app:spanCount="1"
              />



  </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Navigation drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
